work in peters' feedback

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -14,6 +14,13 @@
   year =         {2015}
 }
 
+@Misc{blakesnow2016,
+  author =       {Snow, Blake},
+  title =        {Developers Wanted: Bluetooth Low Energy is the Future of Wearables},
+  howpublished = {Retrieved May 10, 2016, from \url{http://www.broadcom.com/blog/ces/developers-wanted-bluetooth-low-energy-is-the-future-of-wearables/}},
+  year =         {2015}
+}
+
 @Misc{bluetoothsig2016,
   author =       {{Bluetooth SIG}},
   title =        {Our history},
@@ -234,6 +241,16 @@
   title =   {HACKING IoT: A Case Study on Baby Monitor Exposures and Vulnerabilities},
   journal = {Rapid7},
   year =    {2015}
+}
+
+@Article{swan2012sensor,
+  author =  {Swan, Melanie},
+  title =   {Sensor mania! the internet of things, wearable computing, objective metrics, and the quantified self 2.0},
+  journal = {Journal of Sensor and Actuator Networks},
+  year =    {2012},
+  volume =  {1},
+  number =  {3},
+  pages =   {217--253}
 }
 
 @Book{Townsend2014,
