Feedback Joeri & don't use "you" as much

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -21,6 +21,13 @@
   year =         {2015}
 }
 
+@Article{bluetooth2014bluetooth,
+  author =  {{Bluetooth SIG}},
+  title =   {Bluetooth Core Specification 4.2},
+  journal = {Bluetooth SIG Standard},
+  year =    {2014}
+}
+
 @Misc{bluetoothsig2016,
   author =       {{Bluetooth SIG}},
   title =        {Our history},
