Remove "of course"

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -203,7 +203,7 @@
 \chapter{Introduction}
 \label{ch:introduction}
 \epigraph{``If you think that the internet has changed your life, think again. The IoT is about to change it all over again!''}{Brendan O'Brien}
-The Internet of Things has not been around for a very long time, yet it is quickly becoming very popular and almost every company wants to be a part of it. It gained a lot of popularity around 2011 when IPV6 was released and it was around this time Gartner \citep{gartner2012} also took note of this trend and put it on their annual Hype Cycle for the first time. Around the same time of the growing popularity of the Internet of Things, the Bluetooth Special Interest Group released a new Bluetooth specification that was built for the Internet of Things: Bluetooth Low Energy. Gartner \citep{gartner2015} also suggests that by 2020, around 20 billion `things' will be connected to the Internet of Things, a market that Bluetooth Low Energy wants to play a big role in.
+The Internet of Things has not been around for a very long time, yet it is quickly becoming very popular and almost every company wants to be a part of it. It gained a lot of popularity around 2011 when IPv6 was released and it was around this time Gartner \citep{gartner2012} also took note of this trend and put it on their annual Hype Cycle for the first time. Around the same time of the growing popularity of the Internet of Things, the Bluetooth Special Interest Group released a new Bluetooth specification that was built for the Internet of Things: Bluetooth Low Energy. Gartner \citep{gartner2015} also suggests that by 2020, around 20 billion `things' will be connected to the Internet of Things, a market that Bluetooth Low Energy wants to play a big role in.
 
 This thesis aims to provide an introduction to Bluetooth Low Energy and how a smartphone can be used as a gateway to allow Bluetooth Low Energy devices, which don't have internet capabilities, to connect to the internet. In this chapter the problem that the thesis is trying to find an answer for is elaborated, as well as the actual questions that need answering. An introduction about `AllThingsTalk' can also be found, a company that is trying to figure out how to connect Bluetooth Low Energy wearables with their Internet of Things infrastructure.
 
@@ -285,7 +285,7 @@ In order to help speed up the learning process and quickly allow me to prototype
 
 The first goal of the Proof of Concept was to connect to a Bluetooth Low Energy device and read data on a smartphone. Various examples and repositories with source code provided some interesting insights as to how this API worked. Bluetooth also offers some starter kits to kick-start any project that wants to use Bluetooth Low Energy, including a very comprehensive and easy to use wrapper around the Android Bluetooth API.
 
-Further goals of course include writing data and coupling the Bluetooth layer to the network layer, automatic service discovery and mapping, automatic generation of assets on the online platform and more. The most important concepts on how to do this are elaborated in chapter \ref{ch:android} and the accomplishments are listed in the conclusion, section \ref{sec:conclusion}.
+Further goals include writing data and coupling the Bluetooth layer to the network layer, automatic service discovery and mapping, automatic generation of assets on the online platform and more. The most important concepts on how to do this are elaborated in chapter \ref{ch:android} and the accomplishments are listed in the conclusion, section \ref{sec:conclusion}.
 
 
 % TODO: Hoe ben je te werk gegaan? Verdeel je onderzoek in grote fasen, en
@@ -638,7 +638,7 @@ The main reason why a gateway is being implemented on a smartphone is because of
 
 \subsection{Nexus 5}
 \label{subsec:nexus}
-The most important device for developing the gateway is of course a smartphone. It is important that the smartphone used features at least Bluetooth v4.0, as v4.0 and up started to support Bluetooth Low Energy.
+The most important device for developing the gateway is a smartphone. It is important that the smartphone used features at least Bluetooth v4.0, as v4.0 and up started to support Bluetooth Low Energy.
 
 By all means, another device than the Nexus 5 could be used to make a gateway. It was just used because it was the best device to my disposal that suited the use case. The Nexus 5 features Bluetooth v4.0, but using a device that has Bluetooth v4.2 won't limit the possibilities in any way since Bluetooth Low Energy is backwards compatible.
 
