Correct some typo's and add some sources

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -1,5 +1,12 @@
 % Encoding: windows-1252
 
+@Misc{ant2016,
+  author =       {{ANT Wireless}},
+  title =        {The Wireless Sensor Network Solution},
+  howpublished = {Retrieved May 23, 2016, from \url{https://www.thisisant.com/}},
+  year =         {2016}
+}
+
 @Misc{ashford2015,
   author =       {Ashford, Warwick},
   title =        {Researchers raise privacy concerns about Bluetooth Low Energy devices},
@@ -26,6 +33,13 @@
   title =   {Bluetooth Core Specification 4.2},
   journal = {Bluetooth SIG Standard},
   year =    {2014}
+}
+
+@Misc{bluetooth2016training,
+  author =       {{Bluetooth SIG}},
+  title =        {Get Bluetooth Trained},
+  howpublished = {Retrieved May 23, 2016, from \url{https://www.bluetooth.com/develop-with-bluetooth/developer-resources-tools/developer-training-videos}},
+  year =         {2016}
 }
 
 @Misc{bluetoothsig2016,
@@ -307,5 +321,19 @@
   Volume                   = {5},
 
   Publisher                = {IEEE}
+}
+
+@Misc{zigbee2016,
+  author =       {{The ZigBee Alliance}},
+  title =        {The ZigBee Alliance, Control your World},
+  howpublished = {Retrieved May 23, 2016, from \url{http://www.zigbee.org/}},
+  year =         {2016}
+}
+
+@Misc{zwave2016,
+  author =       {{ZWave Alliance}},
+  title =        {Z-Wave Home control},
+  howpublished = {Retrieved May 23, 2016, from \url{http://www.z-wave.com/}},
+  year =         {2016}
 }
 
